Reworked to build with 3.2 SDK
Mostly removing SetFullscreen calls and changing GColorEq calls to .argb comparisons

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,21 +1,24 @@
 {
-  "uuid": "3db3b261-f835-43ec-90c0-baf75b803172", 
-  "shortName": "Block World", 
-  "longName": "Block World", 
-  "companyName": "Chris Lewis", 
-  "versionCode": 1, 
-  "versionLabel": "1.0", 
-  "watchapp": {
-    "watchface": false
-  }, 
-  "sdkVersion": "3", 
-  "targetPlatforms": [
-    "basalt"
-  ], 
-  "appKeys": {
-    "dummy": 0
-  }, 
-  "resources": {
-    "media": []
-  }
+    "appKeys": {
+        "dummy": 0
+    },
+    "capabilities": [
+        ""
+    ],
+    "companyName": "Chris Lewis",
+    "longName": "Block World",
+    "projectType": "native",
+    "resources": {
+        "media": []
+    },
+    "sdkVersion": "3",
+    "shortName": "Block World",
+    "targetPlatforms": [
+        "basalt"
+    ],
+    "uuid": "3db3b261-f835-43ec-90c0-baf75b803172",
+    "versionLabel": "1.0",
+    "watchapp": {
+        "watchface": false
+    }
 }
